--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Capstone Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i",
+    "start": "node app.js"
   },
   "jest": {
     "transform": {
@@ -12,14 +13,16 @@
     }
   },
   "keywords": [],
-  "author": "Nathanael",
+  "author": "capstone",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google-cloud/debug-agent": "^8.0.0",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^3.1.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
