--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "keywords": [],
   "author": "capstone",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "prettier": "^3.1.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
