--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL= "mysql://root:@localhost:3306/capstone"
+#for deployement only
+#DATABASE_URL= "mysql://root:12345678@34.128.82.238/capstone"
